# vinfo

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
VinfoBar/: Info.plist  Package.swift  build_app.sh
VinfoBar/Sources/VinfoBar/App/: AppDelegate.swift  VinfoBarApp.swift
VinfoBar/Sources/VinfoBar/Checkers/: CheckerRegistry.swift  DockerChecker.swift  EnvironmentChecker.swift  GitChecker.swift  NodeChecker.swift  PythonChecker.swift
VinfoBar/Sources/VinfoBar/Config/: AppConfig.swift  RefreshFrequency.swift
VinfoBar/Sources/VinfoBar/Core/: CommandResult.swift  CommandRunner.swift
VinfoBar/Sources/VinfoBar/Models/: DockerInfo.swift  EnvironmentInfo.swift  GitInfo.swift  HealthStatus.swift  NodeInfo.swift  PythonInfo.swift
VinfoBar/Sources/VinfoBar/Providers/: DockerProvider.swift  EnvironmentProvider.swift  GitProvider.swift  NodeProvider.swift  ProviderRegistry.swift  PythonProvider.swift
VinfoBar/Sources/VinfoBar/Services/: ConfigService.swift  EnvironmentService.swift
VinfoBar/Sources/VinfoBar/Views/: DetailView.swift  EnvironmentRowView.swift  PopoverView.swift  SettingsView.swift
src/vinfo/: __main__.py  app.py  config.py  constants.py
src/vinfo/actions/: base.py  docker_actions.py  git_actions.py  node_actions.py  python_actions.py
src/vinfo/core/: base.py  detector.py  models.py  registry.py  runner.py
src/vinfo/providers/: __init__.py  docker_provider.py  git_provider.py  node_provider.py  python_provider.py
src/vinfo/ui/: theme.css
src/vinfo/ui/screens/: dashboard.py  detail.py  docker_detail.py  git_detail.py  node_detail.py  (+1 more)
(+2 files in other folders)
